--- a/src/pydjinni/generator/java/java/templates/enum.java.jinja2
+++ b/src/pydjinni/generator/java/java/templates/enum.java.jinja2
@@ -2,7 +2,7 @@
 
 {% block content %}
 {{ type_def.java.comment }}
-public enum {{ type_def.java.typename }} {
+public enum {{ type_def.java.name }} {
 {% for item in type_def.items %}
     {% if item.comment %}
     {{ item.java.comment | indent(width=4) }}
