WIP: add IDL const value assignment
- the IDL grammar allows for value assignment to constants
- primitive types and records can be assigned
- basic type checking: does the value fit the variable type?
- add `source_dir` information to generated files report
- some support lib refactoring (unclear state)
- improve IDL namespaces. allow for scoped type references

--- a/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
@@ -3,7 +3,7 @@
 {% block header %}
 #pragma once
 {% for include in type_def.cpp.includes -%}
-{{ include_def(include) }}
+#include {{ include | header }}
 {% endfor %}
 {% endblock %}
 
