--- a/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
@@ -5,7 +5,7 @@
 
 #include <algorithm>
 {% for include in type_def.cpp.includes -%}
-{{ include_def(include) }}
+#include {{ include | header }}
 {% endfor %}
 {% endblock %}
 
