--- a/src/pydjinni/generator/java/jni/templates/base.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/base.jinja2
@@ -8,7 +8,7 @@
 namespace {{ type_def.jni.namespace }} {
 {% endif %}
 {% block content %}
-{% endblock content %}
+{% endblock %}
 {% if type_def.jni.namespace -%}
 }  // namespace {{ type_def.jni.namespace }}
 {% endif %}
