--- a/src/pydjinni/generator/cpp/cpp/templates/source/record.cpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/source/record.cpp.jinja2
@@ -1,5 +1,5 @@
 {% extends "base.jinja2" %}
 
 {% block header %}
-{{ include_def(type_def.cpp.header) }}
+#include {{ type_def.cpp.header | header }}
 {% endblock %}
