WIP: continued work on compiling first test case
- jni code is now compiling
- objc and objcpp code has made some progress

--- a/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
@@ -10,6 +10,7 @@
 {% block content %}
 {{ type_def.cpp.comment }}
 class {{ type_def.cpp.name }} {
+public:
     virtual ~{{ type_def.cpp.name }}() {}
 
 {% for method in type_def.methods %}
