--- a/src/pydjinni/generator/java/jni/templates/header/flags.hpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/header/flags.hpp.jinja2
@@ -14,7 +14,7 @@ class {{ type_def.jni.translator }} final : ::djinni::JniFlags {
 public:
     using Type = {{ type_def.jni.name }}
     using CppType = {{ type_def.cpp.typename }};
-    using JniType = {{ type_def.jni.typename }};
+    using JniType = {{ type_def.jni.typename.value }};
 
     static CppType toCpp(JNIEnv* jniEnv, JniType j) { return static_cast<CppType>(::djinni::JniClass<Type>::get().ordinal(jniEnv, j)); }
     static ::djinni::LocalRef<JniType> fromCpp(JNIEnv* jniEnv, CppType c) { return ::djinni::JniClass<Type>::get().create(jniEnv, static_cast<jint>(c)); }
