--- a/src/pydjinni/generator/java/jni/templates/header/interface.hpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/header/interface.hpp.jinja2
@@ -4,6 +4,7 @@
 #pragma once
 
 #include "pydjinni/jni/support.hpp"
+#include {{ type_def.cpp.header | header }}
 #include {{ type_def.jni.header | header }}
 {% endblock %}
 
@@ -12,10 +13,10 @@ class {{ type_def.jni.name }} final : ::pydjinni::JniInterface<{{ type_def.cpp.t
 public:
     using CppType = std::shared_ptr<{{ type_def.cpp.typename }}>;
     using CppOptType = std::shared_ptr<{{ type_def.cpp.typename }}>;
-    using JniType = {{ type_def.jni.name }};
+    using JniType = {{ type_def.jni.typename.value }};
     using Boxed = {{ type_def.cpp.typename }};
 
-    ~MyCppInterface();
+    ~{{ type_def.jni.name }}();
 
     static CppType toCpp(JNIEnv* jniEnv, JniType j) { return ::pydjinni::JniClass<{{ type_def.jni.translator }}>::get()._fromJava(jniEnv, j); }
     static ::pydjinni::LocalRef<JniType> fromCppOpt(JNIEnv* jniEnv, const CppOptType& c) { return {jniEnv, ::pydjinni::JniClass<{{ type_def.jni.translator }}>::get()._toJava(jniEnv, c)}; }
