--- a/src/pydjinni/generator/java/jni/templates/source/interface.cpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/source/interface.cpp.jinja2
@@ -2,23 +2,26 @@
 
 {% block header %}
 #include "{{ type_def.jni.header }}"
+{% for include in type_def.jni.includes %}
+#include {{ include | header }}
+{% endfor %}
 {% endblock %}
 
 {% block content %}
-{{ type_def.jni.name }}::{{ type_def.jni.name }}() : ::djinni::JniInterface<{{ type_def.cpp.typename }}, {{ type_def.jni.name }}>("{{ type_def.jni.type_signature }}") {}
+{{ type_def.jni.name }}::{{ type_def.jni.name }}() : ::pydjinni::JniInterface<{{ type_def.cpp.typename }}, {{ type_def.jni.name }}>("{{ type_def.jni.type_signature }}") {}
 {{ type_def.jni.name }}::~{{ type_def.jni.name }}() = default;
 
 CJNIEXPORT void JNICALL {{ type_def.jni.jni_prefix }}_00024CppProxy_nativeDestroy(JNIEnv* jniEnv, jobject /*this*/, jlong nativeRef)
 {
     ::pydjinni::translate_exceptions(jniEnv, [&](){
-        delete reinterpret_cast<::djinni::CppProxyHandle<{{ type_def.cpp.typename }}>*>(nativeRef);
+        delete reinterpret_cast<::pydjinni::CppProxyHandle<{{ type_def.cpp.typename }}>*>(nativeRef);
     });
 }
 
 {% for method in type_def.methods %}
-CJNIEXPORT {{ method.return_type_ref.type_def.jni.typename if method.return_type_ref else "void" }} JNICALL {{ type_def.jni.jni_prefix }}_{{ method.jni.jni_name }}(JNIEnv* jniEnv, jobject /*this*/, jlong nativeRef
+CJNIEXPORT {{ method.return_type_ref.type_def.jni.typename.value if method.return_type_ref else "void" }} JNICALL {{ type_def.jni.jni_prefix }}_{{ method.jni.jni_name }}(JNIEnv* jniEnv, jobject /*this*/, jlong nativeRef
     {%- for parameter in method.parameters -%}
-    , {{ parameter.type_ref.type_def.jni.typename }} {{ parameter.jni.name }}
+    , {{ parameter.type_ref.type_def.jni.typename.value }} {{ parameter.jni.name }}
     {%- endfor -%}
     ) {
     {{ "return" if method.return_type_ref }} ::pydjinni::translate_exceptions(jniEnv, [&](){
