--- a/src/pydjinni/generator/java/jni/templates/source/loader.cpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/source/loader.cpp.jinja2
@@ -16,17 +16,16 @@
 //
 // This provides a minimal JNI_OnLoad and JNI_OnUnload implementation.
 // Don't include it if your library does require a custom JNI_OnLoad implementation with custom initialization logic.
-#pragma once
 
 #include "pydjinni/jni/support.hpp"
 
 // Called when library is loaded by the first class which uses it.
 CJNIEXPORT jint JNICALL JNI_OnLoad(JavaVM * jvm, void * /*reserved*/) {
-    djinni::jniInit(jvm);
+    pydjinni::jniInit(jvm);
     return JNI_VERSION_1_6;
 }
 
 // (Potentially) called when library is about to be unloaded.
 CJNIEXPORT void JNICALL JNI_OnUnload(JavaVM * /*jvm*/, void * /*reserved*/) {
-    djinni::jniShutdown();
+    pydjinni::jniShutdown();
 }
