--- a/src/pydjinni/generator/objc/objc/templates/header/interface.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/interface.h.jinja2
@@ -1,5 +1,11 @@
 {% extends "base.jinja2" %}
 
+{% block header %}
+{% for import in type_def.objc.imports -%}
+#import {{ import | header }}
+{% endfor %}
+{% endblock %}
+
 {% block content %}
 {{ type_def.objc.comment }}
 NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
@@ -8,11 +14,10 @@ NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
 {% if method.comment %}
 {{ method.objc.comment }}
 {% endif %}
-{{ "+" if method.static else "-" }} {{ (("(" ~ method.return_type_ref.type_def.objc.typename ~ ")") if method.return_type_ref) ~ method.objc.name }}
+{{ "+" if method.static else "-" }} {{ ((method.return_type_ref.type_def | type_decl ) if method.return_type_ref) ~ method.objc.name }}
 {%- for parameter in method.parameters -%}
-{{ ":" if loop.first else (" " ~ parameter.objc.name ~ ":") }}(nonnull {{ parameter.type_ref.type_def.objc.typename }} *){{ parameter.objc.name }}
-{%- endfor -%}
-;
+{{ ":" if loop.first else (" " ~ parameter.objc.name ~ ":") }}{{ parameter.type_ref.type_def | type_decl }}{{ parameter.objc.name }}
+{% endfor %}
   __attribute__((swift_name("{{ method.objc.name }}(
 {%- for parameter in method.parameters -%}
 {{ parameter.objc.name }}:
