--- a/src/pydjinni/generator/objc/objcpp/templates/source/interface.mm.jinja2
+++ b/src/pydjinni/generator/objc/objcpp/templates/source/interface.mm.jinja2
@@ -3,21 +3,30 @@
 {% block header %}
 #import "{{ type_def.objcpp.header }}"
 #import "{{ type_def.objc.header }}"
+{% for import in type_def.objcpp.imports -%}
+#import {{ import | header }}
+{% endfor %}
 #import "pydjinni/objc/marshal.h"
+#import "pydjinni/objc/error.h"
+#import "pydjinni/marshal.h"
+#import "pydjinni/cpp_wrapper_cache.h"
+#import "pydjinni/objc_wrapper_cache.h"
+#include <exception>
 #include <stdexcept>
+#include <utility>
 
 static_assert(__has_feature(objc_arc), "PyDjinni requires ARC to be enabled for this file");
 {% endblock %}
 
 {% block content %}
-class {{ type_def.objcpp.name }}::ObjcProxy final : public {{ type_def.cpp.name }}, private ::pydjinni::ObjcProxyBase<ObjcType> {
-    friend class {{ type_def.objcpp.typename }};
+class {{ type_def.objcpp.name }}::ObjcProxy final : public {{ type_def.cpp.typename }}, private ::pydjinni::ObjcProxyBase<ObjcType> {
+    friend class {{ type_def.objcpp.translator }};
 public:
     using ObjcProxyBase::ObjcProxyBase;
     {% for method in type_def.methods %}
     {{ method.return_type_ref.type_def.cpp.typename if method.return_type_ref.type_def else "void" }} {{ method.cpp.name }}(
     {%- for parameter in method.parameters -%}
-        const {{ parameter.type_ref.type_def.cpp.typename }}& parameter.cpp.name {{ ", " if not loop.last }}
+        const {{ parameter.type_ref.type_def.cpp.typename }}& {{ parameter.cpp.name}} {{ ", " if not loop.last }}
     {%- endfor -%}
     ) override {
         @autoreleasepool {
@@ -38,7 +47,7 @@ auto {{ type_def.objcpp.name }}::toCpp(ObjcType objc) -> CppType {
     if(!objc) {
         return nullptr;
     }
-    return ::djinni::get_objc_proxy<ObjcProxy>(objc);
+    return ::pydjinni::get_objc_proxy<ObjcProxy>(objc);
 }
 
 auto {{ type_def.objcpp.name }}::fromCppOpt(const CppOptType& cpp) -> ObjcType {
