WIP: allow const assignments
- restructured parser: one class instance per file, on imports
  a new parser is instanced.
- implement const assignment for java
- refactor dependency include logic
- exceptions: allow exceptions without a distinct error code
- updated pydantic to 2.0b2

--- a/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
@@ -3,6 +3,9 @@
 
 {% block header %}
 {% endblock %}
+{% for dependency in type_def.dependencies -%}
+#include {{ dependency.cpp.header | header }}
+{% endfor %}
 
 {%- if type_def.cpp.namespace -%}
 namespace {{ type_def.cpp.namespace }} {
