--- a/src/pydjinni/generator/java/java/templates/flags.java.jinja2
+++ b/src/pydjinni/generator/java/java/templates/flags.java.jinja2
@@ -1,12 +1,11 @@
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import comment %}
 
 {% block content %}
-{{ type_def.java.comment }}
+{{ comment(type_def, indentation=0) }}
 public enum {{ type_def.java.name }} {
 {% for flag in type_def.flags if not flag.none and not flag.all %}
-    {% if flag.comment %}
-    {{ flag.java.comment | indent(4) }}
-    {% endif %}
+    {{ comment(flag) }}
     {{ flag.java.name ~ (";" if loop.last else ",") }}
 {% endfor %}
 }
