--- a/src/pydjinni/generator/objc/objc/templates/header/interface.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/interface.h.jinja2
@@ -1,8 +1,8 @@
 {% extends "base.jinja2" %}
 
 {% block header %}
-{% for import in type_def.objc.imports -%}
-#import {{ import | header }}
+{% for dependency in type_def.dependencies -%}
+#import {{ dependency.objc.header | header }}
 {% endfor %}
 {% endblock %}
 
