--- a/src/pydjinni/generator/objc/objc/templates/header/record.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/record.h.jinja2
@@ -1,5 +1,11 @@
 {% extends "base.jinja2" %}
 
+{% block header %}
+{% for dependency in type_def.dependencies -%}
+#import {{ dependency.objc.header | header }}
+{% endfor %}
+{% endblock %}
+
 {% block content %}
 {{ type_def.objc.comment }}
 NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
