--- a/src/pydjinni/generator/objc/objcpp/templates/header/interface.h.jinja2
+++ b/src/pydjinni/generator/objc/objcpp/templates/header/interface.h.jinja2
@@ -1,6 +1,9 @@
 {% extends "base.jinja2" %}
 
 {% block header %}
+{% for dependency in type_def.dependencies -%}
+#import {{ dependency.objcpp.header | header }}
+{% endfor %}
 #include "{{ type_def.cpp.header }}"
 #include <memory>
 static_assert(__has_feature(objc_arc), "Djinni requires ARC to be enabled for this file");
