--- a/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
@@ -1,4 +1,5 @@
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import comment, constant_declaration %}
 
 {% block header %}
 #pragma once
@@ -7,12 +8,13 @@
 {% endblock %}
 
 {% block content %}
-{{ type_def.cpp.comment }}
+{{ comment(type_def) }}
 struct {{ type_def.cpp.name }} final {
+{% for constant in type_def.constants -%}
+    {{ constant_declaration(constant) }}
+{%- endfor %}
 {% for field in type_def.fields %}
-    {% if field.comment %}
-    {{ field.cpp.comment | indent(width=4) }}
-    {% endif %}
+    {{ comment(field) }}
     {{ field.type_ref.type_def.cpp.typename ~ " " ~ field.cpp.name }};
 {% endfor %}
 
