--- a/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
@@ -1,19 +1,21 @@
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import comment %}
 
 {% block header %}
 #pragma once
 {% endblock %}
 
 {% block content %}
-{{ type_def.cpp.comment }}
+{{ comment(type_def) }}
 class {{ type_def.cpp.name }} {
 public:
     virtual ~{{ type_def.cpp.name }}() {}
 
+{% for constant in type_def.constants -%}
+    {{ constant_declaration(constant) }}
+{%- endfor %}
 {% for method in type_def.methods %}
-    {% if method.comment %}
-    {{ method.cpp.comment | indent(4) }}
-    {% endif %}
+    {{ comment(method) }}
     {{ "static" if method.static else "virtual" }} {{ method.return_type_ref.type_def.cpp.typename if method.return_type_ref else "void" }} {{ method.cpp.name }}(
     {%- for parameter in method.parameters -%}
         const {{ parameter.type_ref.type_def.cpp.typename }}& {{ parameter.cpp.name ~ (", " if not loop.last) }}
