--- a/src/pydjinni/generator/cpp/cpp/templates/source/record.cpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/source/record.cpp.jinja2
@@ -1,5 +1,12 @@
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import constant_definition %}
 
 {% block header %}
 #include {{ type_def.cpp.header | header }}
+{% endblock %}
+
+{% block content %}
+{% for constant in type_def.constants -%}
+{{ constant_definition(type_def, constant) }}
+{% endfor %}
 {% endblock %}
