default deriving configuration option
toString() or description() methods are considered a deriving extension.
Generation of them is disabled by default,
but can be enabled by defining

foo = record { ... } deriving (str)

or by setting generate.default_deriving: [str]

--- a/src/pydjinni/generator/cpp/cpp/templates/source/interface.cpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/source/interface.cpp.jinja2
@@ -8,5 +8,5 @@
 {% block content %}
 {% for constant in type_def.constants -%}
 {{ constant_definition(type_def, constant) }}
-{% endfor %}
+{%- endfor %}
 {% endblock %}
