--- a/src/pydjinni/generator/cpp/cpp/templates/source/record.cpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/source/record.cpp.jinja2
@@ -8,5 +8,5 @@
 {% block content %}
 {% for constant in type_def.constants -%}
 {{ constant_definition(type_def, constant) }}
-{% endfor %}
+{%- endfor %}
 {% endblock %}
