--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -238,3 +238,14 @@
     border: 1px solid var(--md-default-fg-color--lightest);
     border-left: 0;
 }
+
+.new-badge::before {
+    content: "new";
+    background: var(--md-accent-fg-color);
+    color: var(--md-default-bg-color);
+    border-radius: var(--border-radius);
+    font-size: 50%;
+    padding: 2px 6px;
+    margin-right: 6px;
+    vertical-align: 25%;
+}
