introducing integration testing strategy
- allow to disable support lib copy functionality
- add option to generate java library loader code
- improve jni loader: include library name
- added new integration testing structure:
  tests are defined in the target language generator folder
- java tests do already run (but fail)
- objc tests do not yet exist

--- a/src/pydjinni/generator/java/jni/templates/source/loader.cpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/source/loader.cpp.jinja2
@@ -20,12 +20,12 @@
 #include "pydjinni/jni/support.hpp"
 
 // Called when library is loaded by the first class which uses it.
-CJNIEXPORT jint JNICALL JNI_OnLoad(JavaVM * jvm, void * /*reserved*/) {
+CJNIEXPORT jint JNICALL JNI_OnLoad_{{ config.loader }}(JavaVM * jvm, void * /*reserved*/) {
     pydjinni::jniInit(jvm);
     return JNI_VERSION_1_6;
 }
 
 // (Potentially) called when library is about to be unloaded.
-CJNIEXPORT void JNICALL JNI_OnUnload(JavaVM * /*jvm*/, void * /*reserved*/) {
+CJNIEXPORT void JNICALL JNI_OnUnload_{{ config.loader }}(JavaVM * /*jvm*/, void * /*reserved*/) {
     pydjinni::jniShutdown();
 }
